--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
   <title></title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <script type="text/javascript" src="js/respond.js"></script>
 </head>
 <body>
   
+
+  <script type="text/javascript" src="js/bootstrap.min.js"></script>
 </body>
 </html>
