--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
   
 
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
