--- a/index.html
+++ b/index.html
@@ -13,6 +13,24 @@
 </head>
 <body>
   
+  <header class="secondary-dark-blue-bg">
+    <div class="container">
+      <div class="row">
+        <a href="#" class="logo"><img src="img/logo.png" alt="logo"></a>
+        <nav class="menu" id="menu">
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Service</a></li>
+            <li><a href="#">Our Works</a></li>
+            <li><a href="#">Team</a></li>
+            <li><a href="#">Testimonials</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </nav>
+        <div class="clearfix"></div>
+      </div>
+    </div>
+  </header>
 
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
