--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="style.css">
+  <script type="text/javascript" src="js/jquery-1.12.4.min.js"></script>
   <script type="text/javascript" src="js/respond.js"></script>
+  <script type="text/javascript" src="js/caroufredsel.js"></script>
 </head>
 <body>
   
@@ -32,6 +34,35 @@
     </div>
   </header>
 
+  <section class="slider">
+    <ul class="slider-carousel" id="slider-carousel">
+      <li class="img1">
+        <h1>Welcome to <span class="primary">Corporate</span></h1>
+        <p>It is a long established fact that a reader will be distracted by the readable<br/>content of a page when looking at its layout</p>
+        <a href="#" class="primary-bg cta1">Get Started</a>
+        <a href="#" class="secondary-sky-blue-bg cta2">Contact Us</a>
+      </li>
+      <li class="img2">
+        <h1>Welcome to <span class="primary">Corporate</span></h1>
+        <p>It is a long established fact that a reader will be distracted by the readable<br/>content of a page when looking at its layout</p>
+        <a href="#" class="primary-bg cta1">Get Started</a>
+        <a href="#" class="secondary-sky-blue-bg cta2">Contact Us</a>
+      </li>
+      <li class="img3">
+        <h1>Welcome to <span class="primary">Corporate</span></h1>
+        <p>It is a long established fact that a reader will be distracted by the readable<br/>content of a page when looking at its layout</p>
+        <a href="#" class="primary-bg cta1">Get Started</a>
+        <a href="#" class="secondary-sky-blue-bg cta2">Contact Us</a>
+      </li>
+    </ul>
+
+    <ul class="sliderpager">
+      <li><a href="#"><i class="fa fa-circle"></i></a></li>
+      <li><a href="#"><i class="fa fa-circle"></i></a></li>
+      <li><a href="#"><i class="fa fa-circle"></i></a></li>
+    </ul>
+  </section>
+  
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
 </body>
