--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   
-  <header class="secondary-dark-blue-bg">
+  <header>
     <div class="container">
       <div class="row">
         <a href="#" class="logo"><img src="img/logo.png" alt="logo"></a>
