Add markup and style for services section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <script type="text/javascript" src="js/caroufredsel.js"></script>
 </head>
 <body>
-  
+
   <header>
     <div class="container">
       <div class="row">
@@ -61,6 +61,55 @@
       <li><a href="#"><i class="fa fa-circle"></i></a></li>
       <li><a href="#"><i class="fa fa-circle"></i></a></li>
     </ul>
+  </section>
+
+  <section class="services section-padding">
+    <div class="services-header">
+      <h1>Our Services</h1>
+      <p>It is a long established fact that a reader will be distracted by<br/> readable content of a page when looking at its layout.</p>
+    </div>
+    <div class="services-content">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <p><i class="fa fa-laptop"></i></p>
+            <h3>Web Design</h3>
+            <p>The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it looks like readable English.</p>
+          </div>
+          <div class="col-md-4">
+            <p><i class="fa fa-edit"></i></p>
+            <h3>Graphic Design</h3>
+            <p>The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it looks like readable English.</p>
+          </div>
+          <div class="col-md-4">
+            <p><i class="fa fa-cog"></i></p>
+            <h3>PSD to HTML/CSS</h3>
+            <p>The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it looks like readable English.</p>
+          </div>
+        </div>
+
+        <br/>
+
+        <div class="row">
+          <div class="col-md-4">
+            <p><i class="fa fa-bars"></i></p>
+            <h3>WordPress</h3>
+            <p>The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it looks like readable English.</p>
+          </div>
+          <div class="col-md-4">
+            <p><i class="fa fa-leaf"></i></p>
+            <h3>Theme Development</h3>
+            <p>The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it looks like readable English.</p>
+          </div>
+          <div class="col-md-4">
+            <p><i class="fa fa-globe"></i></p>
+            <h3>Unlimited Support</h3>
+            <p>The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it looks like readable English.</p>
+          </div>
+        </div>
+
+      </div>
+    </div>
   </section>
   
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
