Add markup and style for portfolio section

--- a/index.html
+++ b/index.html
@@ -111,6 +111,89 @@
       </div>
     </div>
   </section>
+
+  <section class="portfolio section-padding">
+    <div class="portfolio-header">
+      <h1 class="white">Our Works</h1>
+      <p>It is a long established fact that a reader will be distracted by<br/> readable content of a page when looking at its layout.</p>
+    </div>
+
+      <div class="container">
+        <div class="row">
+          <ul class="portfolio-carousel">
+            <li>
+              <div class="inner-content">
+                <img src="img/portfolio/project1.png">
+                <div class="overlay-content">
+                  <h3>Environment Website</h3>
+                  <p><a href="#">Click here</a> for details</p>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="inner-content">
+                <img src="img/portfolio/project2.png">
+                <div class="overlay-content">
+                  <h3>Environment Website</h3>
+                  <p><a href="#">Click here</a> for details</p>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="inner-content">
+                <img src="img/portfolio/project3.png">
+                <div class="overlay-content">
+                  <h3>Environment Website</h3>
+                  <p><a href="#">Click here</a> for details</p>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="inner-content">
+                <img src="img/portfolio/project4.png">
+                <div class="overlay-content">
+                  <h3>Environment Website</h3>
+                  <p><a href="#">Click here</a> for details</p>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="inner-content">
+                <img src="img/portfolio/project2.png">
+                <div class="overlay-content">
+                  <h3>Environment Website</h3>
+                  <p><a href="#">Click here</a> for details</p>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="inner-content">
+                <img src="img/portfolio/project1.png">
+                <div class="overlay-content">
+                  <h3>Environment Website</h3>
+                  <p><a href="#">Click here</a> for details</p>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="inner-content">
+                <img src="img/portfolio/project4.png">
+                <div class="overlay-content">
+                  <h3>Environment Website</h3>
+                  <p><a href="#">Click here</a> for details</p>
+                </div>
+              </div>
+            </li>
+          </ul>
+
+          <ul class="portfolio-nav">
+            <li id="prev">&lt;</li>
+            <li id="next">&gt;</li>
+          </ul>
+        </div>
+      </div>
+
+  </section>
   
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
