Add markup and style for team section

--- a/index.html
+++ b/index.html
@@ -192,9 +192,132 @@
           </ul>
         </div>
       </div>
-
   </section>
   
+  <section class="team section-padding">
+    <div class="team-header">
+      <h1>Our Team</h1>
+      <p>It is a long established fact that a reader will be distracted by<br/> readable content of a page when looking at its layout.</p>
+    </div>
+
+      <div class="container">
+        <div class="row">
+          <ul class="team-carousel">
+            <li>
+              <div class="inner-content">
+                <img src="img/team/member1.png">
+                <div class="overlay-content white">
+                  <p class="name primary bold">John Doe</p>
+                  <p class="position secondary-sky-blue bold">Web Developer</p>
+                  <p class="description">The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
+                  <ul class="member-social-links">
+                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                  </ul>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="inner-content">
+                <img src="img/team/member2.png">
+                <div class="overlay-content white">
+                  <p class="name primary bold">John Doe</p>
+                  <p class="position secondary-sky-blue bold">Web Developer</p>
+                  <p class="description">The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
+                  <ul class="member-social-links">
+                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                  </ul>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="inner-content">
+                <img src="img/team/member3.png">
+                <div class="overlay-content white">
+                  <p class="name primary bold">John Doe</p>
+                  <p class="position secondary-sky-blue bold">Web Developer</p>
+                  <p class="description">The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
+                  <ul class="member-social-links">
+                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                  </ul>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="inner-content">
+                <img src="img/team/member4.png">
+                <div class="overlay-content white">
+                  <p class="name primary bold">John Doe</p>
+                  <p class="position secondary-sky-blue bold">Web Developer</p>
+                  <p class="description">The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
+                  <ul class="member-social-links">
+                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                  </ul>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="inner-content">
+                <img src="img/team/member2.png">
+                <div class="overlay-content white">
+                  <p class="name primary bold">John Doe</p>
+                  <p class="position secondary-sky-blue bold">Web Developer</p>
+                  <p class="description">The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
+                  <ul class="member-social-links">
+                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                  </ul>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="inner-content">
+                <img src="img/team/member1.png">
+                <div class="overlay-content white">
+                  <p class="name primary bold">John Doe</p>
+                  <p class="position secondary-sky-blue bold">Web Developer</p>
+                  <p class="description">The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
+                  <ul class="member-social-links">
+                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                  </ul>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="inner-content">
+                <img src="img/team/member4.png">
+                <div class="overlay-content white">
+                  <p class="name primary bold">John Doe</p>
+                  <p class="position secondary-sky-blue bold">Web Developer</p>
+                  <p class="description">The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
+                  <ul class="member-social-links">
+                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                  </ul>
+                </div>
+              </div>
+            </li>
+          </ul>
+
+          <ul class="team-nav">
+            <li id="team-prev">&lt;</li>
+            <li id="team-next">&gt;</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
 </body>
