Add markup and style for testimonial section

--- a/index.html
+++ b/index.html
@@ -318,6 +318,47 @@
       </div>
     </section>
 
+  <section class="testimonials section-padding center">
+    <div class="testimonials-header">
+      <h1 class="white">Client Testimonials</h1>
+      <p>It is a long established fact that a reader will be distracted by<br/> readable content of a page when looking at its layout.</p>
+    </div>
+
+    <ul class="testimonial-carousel">
+      <li>
+        <img src="img/team/member3.png">
+        <p class="name">John Doe</p>
+        <p class="position">Web Designer</p>
+        <blockquote>
+          <i>The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it looks like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, an a search for 'lorem ipsum' will uncover many web sites still in their infancy</i>
+        </blockquote>
+      </li>
+      <li>
+        <img src="img/team/member3.png">
+        <p class="name">John Doe</p>
+        <p class="position">Web Designer</p>
+        <blockquote>
+          <i>The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it looks like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, an a search for 'lorem ipsum' will uncover many web sites still in their infancy</i>
+        </blockquote>
+      </li>
+      <li>
+        <img src="img/team/member3.png">
+        <p class="name">John Doe</p>
+        <p class="position">Web Designer</p>
+        <blockquote>
+          <i>The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it looks like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, an a search for 'lorem ipsum' will uncover many web sites still in their infancy</i>
+        </blockquote>
+      </li>
+    </ul>
+
+    <ul class="testipager">
+      <li><a href="#"><i class="fa fa-circle"></i></a></li>
+      <li><a href="#"><i class="fa fa-circle"></i></a></li>
+      <li><a href="#"><i class="fa fa-circle"></i></a></li>
+    </ul>
+
+  </section>
+
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
 </body>
