--- a/index.html
+++ b/index.html
@@ -390,6 +390,30 @@
     </div>
   </section>
 
+  <section class="contact section-padding">
+    <div class="contact-header center">
+      <h1 class="white">Contact Us</h1>
+      <p>It is a long established fact that a reader will be distracted by<br/> readable content of a page when looking at its layout.</p>
+    </div>
+
+    <form>
+      <fieldset>
+        <input type="text" id="name" placeholder="Name">
+      </fieldset>
+      <fieldset>
+        <input type="email" id="email" placeholder="Email">
+      </fieldset>
+      <fieldset>
+        <input type="text" id="subject" placeholder="Subject">
+      </fieldset>
+      <fieldset>
+        <textarea id="message" cols="30" rows="7" placeholder="Message"></textarea>
+      </fieldset>
+      <fieldset><input type="submit" id="submit" value="Submit"></fieldset>
+    </form>
+
+  </section>
+
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
 </body>
