--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
       <p>It is a long established fact that a reader will be distracted by<br/> readable content of a page when looking at its layout.</p>
     </div>
 
-    <form>
+    <form class="contact-form">
       <fieldset>
         <input type="text" id="name" placeholder="Name">
       </fieldset>
@@ -413,6 +413,44 @@
     </form>
 
   </section>
+
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <h1>About Corporate</h1>
+          <p class="about">The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it looks like readable English</p>
+          <p><i class="fa fa-envelope"></i><span class="contact-email">corporate@gmail.com</span></p>
+          <p><i class="fa fa-mobile"></i><span class="contact-email">+414 777 444</span></p>
+          <p><i class="fa fa-location-arrow"></i><span class="contact-email">69, New York City, New York</span></p>
+        </div>
+        <div class="col-md-4">
+          <h1>Get Blog Updates</h1>
+          <form class="update-form">
+            <fieldset>
+              <input type="text" id="take-email" placeholder="Enter your email here">
+            </fieldset>
+            <fieldset>
+              <input type="submit" id="submit-button" value="Sign Up">
+            </fieldset>
+          </form>
+        </div>
+        <div class="col-md-4">
+          <h1>Stay In Touch</h1>
+          <ul class="footer-social-links">
+            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+            <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+            <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="copyright">
+      <p>Copyright &copy; <span class="primary">Corporate</span> 2015 . All Rights Reserved.</p>
+    </div>
+  </footer>
 
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
