--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,700" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/slicknav.min.css">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/responsive.css">
   <script type="text/javascript" src="js/jquery-1.12.4.min.js"></script>
   <script type="text/javascript" src="js/respond.js"></script>
   <script type="text/javascript" src="js/caroufredsel.js"></script>
@@ -19,8 +21,8 @@
     <div class="container">
       <div class="row">
         <a href="#" class="logo"><img src="img/logo.png" alt="logo"></a>
-        <nav class="menu" id="menu">
-          <ul>
+        <nav>
+          <ul class="menu" id="menu">
             <li><a href="#">Home</a></li>
             <li><a href="#">Service</a></li>
             <li><a href="#">Our Works</a></li>
@@ -453,6 +455,7 @@
   </footer>
 
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="js/jquery.slicknav.min.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
