Add parallax background to portfolio, testimonials and contact us section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <script type="text/javascript" src="js/respond.js"></script>
   <script type="text/javascript" src="js/caroufredsel.js"></script>
 </head>
-<body>
+<body id="main">
 
   <header>
     <div class="container">
@@ -114,7 +114,7 @@
     </div>
   </section>
 
-  <section class="portfolio section-padding">
+  <section class="portfolio section-padding" data-stellar-background-ratio="0.5">
     <div class="portfolio-header">
       <h1 class="white">Our Works</h1>
       <p>It is a long established fact that a reader will be distracted by<br/> readable content of a page when looking at its layout.</p>
@@ -320,7 +320,7 @@
       </div>
     </section>
 
-  <section class="testimonials section-padding center">
+    <section class="testimonials section-padding center" data-stellar-background-ratio="0.5">
     <div class="testimonials-header">
       <h1 class="white">Client Testimonials</h1>
       <p>It is a long established fact that a reader will be distracted by<br/> readable content of a page when looking at its layout.</p>
@@ -392,7 +392,7 @@
     </div>
   </section>
 
-  <section class="contact section-padding">
+  <section class="contact section-padding" data-stellar-background-ratio="0.5">
     <div class="contact-header center">
       <h1 class="white">Contact Us</h1>
       <p>It is a long established fact that a reader will be distracted by<br/> readable content of a page when looking at its layout.</p>
@@ -456,6 +456,7 @@
 
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
   <script type="text/javascript" src="js/jquery.slicknav.min.js"></script>
+  <script type="text/javascript" src="js/stellar.min.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
