Implement jquery-smooth-scroll plugin to enable smooth scrolling to all sections across the site

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
         <a href="#" class="logo animation" data-animation="fadeInLeft"><img src="img/logo.png" alt="logo"></a>
         <nav class="animation" data-animation="fadeInRight">
           <ul class="menu" id="menu">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Service</a></li>
-            <li><a href="#">Our Works</a></li>
-            <li><a href="#">Team</a></li>
-            <li><a href="#">Testimonials</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#slider">Home</a></li>
+            <li><a href="#services">Service</a></li>
+            <li><a href="#portfolio">Our Works</a></li>
+            <li><a href="#team">Team</a></li>
+            <li><a href="#testimonials">Testimonials</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
         </nav>
         <div class="clearfix"></div>
@@ -38,7 +38,7 @@
     </div>
   </header>
 
-  <section class="slider">
+  <section class="slider" id="slider">
     <ul class="slider-carousel" id="slider-carousel">
       <li class="img1">
         <h1>Welcome to <span class="primary">Corporate</span></h1>
@@ -67,7 +67,7 @@
     </ul>
   </section>
 
-  <section class="services section-padding">
+  <section class="services section-padding" id="services">
     <div class="services-header">
       <div class="animation" data-animation="fadeIn">
         <h1>Our Services</h1>
@@ -130,7 +130,7 @@
     </div>
   </section>
 
-  <section class="portfolio section-padding" data-stellar-background-ratio="0.5">
+  <section class="portfolio section-padding" id="portfolio" data-stellar-background-ratio="0.5">
     <div class="animation" data-animation="fadeIn">
       <div class="portfolio-header">
         <h1 class="white">Our Works</h1>
@@ -216,7 +216,7 @@
       </div>
   </section>
   
-  <section class="team section-padding">
+  <section class="team section-padding" id="team">
     <div class="animation" data-animation="fadeIn">
       <div class="team-header">
         <h1>Our Team</h1>
@@ -344,7 +344,7 @@
       </div>
     </section>
 
-    <section class="testimonials section-padding center animation" data-stellar-background-ratio="0.5" data-animation="fadeInUp">
+  <section class="testimonials section-padding center animation" id="testimonials" data-stellar-background-ratio="0.5" data-animation="fadeInUp">
     <div class="testimonials-header">
       <h1 class="white">Client Testimonials</h1>
       <p>It is a long established fact that a reader will be distracted by<br/> readable content of a page when looking at its layout.</p>
@@ -382,10 +382,9 @@
       <li><a href="#"><i class="fa fa-circle"></i></a></li>
       <li><a href="#"><i class="fa fa-circle"></i></a></li>
     </ul>
-
   </section>
 
-  <section class="blog section-padding">
+  <section class="blog section-padding" id="blog">
     <div class="blog-header center">
       <h1>Recent Post from Blog</h1>
       <p>It is a long established fact that a reader will be distracted by<br/> readable content of a page when looking at its layout.</p>
@@ -422,7 +421,7 @@
     </div>
   </section>
 
-  <section class="contact section-padding" data-stellar-background-ratio="0.5">
+  <section class="contact section-padding" id="contact" data-stellar-background-ratio="0.5">
     <div class="contact-header center">
       <h1 class="white">Contact Us</h1>
       <p>It is a long established fact that a reader will be distracted by<br/> readable content of a page when looking at its layout.</p>
@@ -494,6 +493,7 @@
   <script type="text/javascript" src="js/jquery.slicknav.min.js"></script>
   <script type="text/javascript" src="js/stellar.min.js"></script>
   <script type="text/javascript" src="js/jquery.waypoints.min.js"></script>
+  <script type="text/javascript" src="js/smoothscroll.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
