Add pace.js and pace-theme.css plugin for page loading animation

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <title></title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- page loading -->
+  <script type="text/javascript" src="js/pace.js"></script>
+  <link rel="stylesheet" href="css/pace-theme.css">
+  <!-- css styles -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,700" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -18,7 +22,7 @@
   <script type="text/javascript" src="js/caroufredsel.js"></script>
 </head>
 <body id="main">
-
+<div class="entire-content">
   <header>
     <div class="container">
       <div class="row">
@@ -495,5 +499,6 @@
   <script type="text/javascript" src="js/jquery.waypoints.min.js"></script>
   <script type="text/javascript" src="js/smoothscroll.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
+</div>
 </body>
 </html>
