Add finishing touches by changing duplicate contents

--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
         <a href="#" class="secondary-sky-blue-bg cta2">Contact Us</a>
       </li>
       <li class="img2">
-        <h1>Welcome to <span class="primary">Corporate</span></h1>
+        <h1We are <span class="primary">Developers</span></h1>
         <p>It is a long established fact that a reader will be distracted by the readable<br/>content of a page when looking at its layout</p>
-        <a href="#" class="primary-bg cta1">Get Started</a>
+        <a href="#" class="primary-bg cta1">See Our Works</a>
         <a href="#" class="secondary-sky-blue-bg cta2">Contact Us</a>
       </li>
       <li class="img3">
-        <h1>Welcome to <span class="primary">Corporate</span></h1>
+        <h1>We make <span class="primary">Awesome Themes</span></h1>
         <p>It is a long established fact that a reader will be distracted by the readable<br/>content of a page when looking at its layout</p>
-        <a href="#" class="primary-bg cta1">Get Started</a>
+        <a href="#" class="primary-bg cta1">Check Our Themes</a>
         <a href="#" class="secondary-sky-blue-bg cta2">Contact Us</a>
       </li>
     </ul>
@@ -159,7 +159,7 @@
                 <div class="inner-content">
                   <img src="img/portfolio/project2.png">
                   <div class="overlay-content">
-                    <h3>Environment Website</h3>
+                    <h3>Ecommerce Website</h3>
                     <p><a href="#">Click here</a> for details</p>
                   </div>
                 </div>
@@ -168,7 +168,7 @@
                 <div class="inner-content">
                   <img src="img/portfolio/project3.png">
                   <div class="overlay-content">
-                    <h3>Environment Website</h3>
+                    <h3>Portfolio Website</h3>
                     <p><a href="#">Click here</a> for details</p>
                   </div>
                 </div>
@@ -177,7 +177,7 @@
                 <div class="inner-content">
                   <img src="img/portfolio/project4.png">
                   <div class="overlay-content">
-                    <h3>Environment Website</h3>
+                    <h3>Blog Website</h3>
                     <p><a href="#">Click here</a> for details</p>
                   </div>
                 </div>
@@ -186,7 +186,7 @@
                 <div class="inner-content">
                   <img src="img/portfolio/project2.png">
                   <div class="overlay-content">
-                    <h3>Environment Website</h3>
+                    <h3>Corporate Website</h3>
                     <p><a href="#">Click here</a> for details</p>
                   </div>
                 </div>
@@ -195,7 +195,7 @@
                 <div class="inner-content">
                   <img src="img/portfolio/project1.png">
                   <div class="overlay-content">
-                    <h3>Environment Website</h3>
+                    <h3>Commerce Website</h3>
                     <p><a href="#">Click here</a> for details</p>
                   </div>
                 </div>
@@ -204,7 +204,7 @@
                 <div class="inner-content">
                   <img src="img/portfolio/project4.png">
                   <div class="overlay-content">
-                    <h3>Environment Website</h3>
+                    <h3>Retail Website</h3>
                     <p><a href="#">Click here</a> for details</p>
                   </div>
                 </div>
@@ -251,8 +251,8 @@
                 <div class="inner-content">
                   <img src="img/team/member2.png">
                   <div class="overlay-content white">
-                    <p class="name primary bold">John Doe</p>
-                    <p class="position secondary-sky-blue bold">Web Developer</p>
+                    <p class="name primary bold">Christina</p>
+                    <p class="position secondary-sky-blue bold">Web Designer</p>
                     <p class="description">The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
                     <ul class="member-social-links">
                       <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -266,8 +266,8 @@
                 <div class="inner-content">
                   <img src="img/team/member3.png">
                   <div class="overlay-content white">
-                    <p class="name primary bold">John Doe</p>
-                    <p class="position secondary-sky-blue bold">Web Developer</p>
+                    <p class="name primary bold">Alex</p>
+                    <p class="position secondary-sky-blue bold">UI/UX Designer</p>
                     <p class="description">The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
                     <ul class="member-social-links">
                       <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -296,8 +296,8 @@
                 <div class="inner-content">
                   <img src="img/team/member2.png">
                   <div class="overlay-content white">
-                    <p class="name primary bold">John Doe</p>
-                    <p class="position secondary-sky-blue bold">Web Developer</p>
+                    <p class="name primary bold">Alisha</p>
+                    <p class="position secondary-sky-blue bold">Web Designer</p>
                     <p class="description">The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
                     <ul class="member-social-links">
                       <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -311,7 +311,7 @@
                 <div class="inner-content">
                   <img src="img/team/member1.png">
                   <div class="overlay-content white">
-                    <p class="name primary bold">John Doe</p>
+                    <p class="name primary bold">Dennis</p>
                     <p class="position secondary-sky-blue bold">Web Developer</p>
                     <p class="description">The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
                     <ul class="member-social-links">
@@ -326,8 +326,8 @@
                 <div class="inner-content">
                   <img src="img/team/member4.png">
                   <div class="overlay-content white">
-                    <p class="name primary bold">John Doe</p>
-                    <p class="position secondary-sky-blue bold">Web Developer</p>
+                    <p class="name primary bold">Rob</p>
+                    <p class="position secondary-sky-blue bold">UI/UX Designer</p>
                     <p class="description">The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
                     <ul class="member-social-links">
                       <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -358,6 +358,14 @@
       <li>
         <img src="img/team/member3.png">
         <p class="name">John Doe</p>
+        <p class="position">Web Developer</p>
+        <blockquote>
+          <i>The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it looks like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, an a search for 'lorem ipsum' will uncover many web sites still in their infancy</i>
+        </blockquote>
+      </li>
+      <li>
+        <img src="img/team/member3.png">
+        <p class="name">Christina</p>
         <p class="position">Web Designer</p>
         <blockquote>
           <i>The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it looks like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, an a search for 'lorem ipsum' will uncover many web sites still in their infancy</i>
@@ -365,16 +373,8 @@
       </li>
       <li>
         <img src="img/team/member3.png">
-        <p class="name">John Doe</p>
-        <p class="position">Web Designer</p>
-        <blockquote>
-          <i>The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it looks like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, an a search for 'lorem ipsum' will uncover many web sites still in their infancy</i>
-        </blockquote>
-      </li>
-      <li>
-        <img src="img/team/member3.png">
-        <p class="name">John Doe</p>
-        <p class="position">Web Designer</p>
+        <p class="name">Alex</p>
+        <p class="position">UI/UX Designer</p>
         <blockquote>
           <i>The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it looks like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, an a search for 'lorem ipsum' will uncover many web sites still in their infancy</i>
         </blockquote>
