Change pace loader color to red. Fix typo.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <a href="#" class="secondary-sky-blue-bg cta2">Contact Us</a>
       </li>
       <li class="img2">
-        <h1We are <span class="primary">Developers</span></h1>
+        <h1>We are <span class="primary">Developers</span></h1>
         <p>It is a long established fact that a reader will be distracted by the readable<br/>content of a page when looking at its layout</p>
         <a href="#" class="primary-bg cta1">See Our Works</a>
         <a href="#" class="secondary-sky-blue-bg cta2">Contact Us</a>
@@ -489,7 +489,7 @@
       </div>
     </div>
     <div class="copyright">
-      <p>Copyright &copy; <span class="primary">Corporate</span> 2015 . All Rights Reserved.</p>
+      <p>Copyright &copy; <span class="primary">Corporate</span> 2017 . All Rights Reserved.</p>
     </div>
   </footer>
 
